[project]
name = "knowlt"
version = "0.1.0"
description = "VectorOps Know Lite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "devtools>=0.12.2",
    "pydantic>=2.11.7",
    "duckdb>=1.4.1",
    "pathspec==0.12.1",
    "structlog>=25.4.0",
    "tree-sitter-go>=0.23.4",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-java>=0.23.5",
    "pypika",
    "pydantic-settings>=2.10.1",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
]

[tool.uv]
package = true

[tool.uv.sources]
pypika = { git = "https://github.com/VectorOps/pypika.git", rev = "v0.49.4-dev" }

[tool.mypy]
plugins = ['pydantic.mypy']
exclude = [
    "^tests/parsers/python/samples/"
]
exclude_gitignore = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "mypy>=1.17.0",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["knowlt*"]

[tool.setuptools.package-data]
know = ["migrations/**/*.sql"]
